--- a/EmployeeDB/src/main/resources/templates/illegalUrl.html
+++ b/EmployeeDB/src/main/resources/templates/illegalUrl.html
@@ -5,8 +5,8 @@
 <title>Error</title>
 </head>
 <body>
-	<h1>不正なURLです</h1>
-	<p>URLが不正です。存在しないデータを参照している可能性があります。</p>
-	<a href="/employeList" th:href="@{/employeeList}">一覧画面へ戻る</a>
+	<h1>Illegal Url</h1>
+	<p>The requested url is illegal. You have requested a non-existent data or deleted data.</p>
+	<a href="/employeList" th:href="@{/employeeList}">Back to list</a>
 </body>
 </html>
