--- a/EmployeeDB/src/main/resources/templates/employeeDetail.html
+++ b/EmployeeDB/src/main/resources/templates/employeeDetail.html
@@ -6,26 +6,26 @@
 </head>
 <body>
 	<h1>Employee Detail</h1>
-	<button type="button" th:onClick="'location.href = \'' + @{../employeeEdit?seqNo={id}(id=${employee.seqNo})} + '\''">編集</button>
+	<button type="button" th:onClick="'location.href = \'' + @{../employeeEdit?seqNo={id}(id=${employee.seqNo})} + '\''">Edit</button>
 	<form method="post" th:action="@{./employeeDetail/delete}">
-			<button type="submit" class="btn btn-default">削除</button>
+			<button type="submit" class="btn btn-default">Delete</button>
 			<input type="hidden" name="seqNo" th:value="${employee.seqNo}" />
 		</form>
 	<table>
 		<tr>
-			<td th:text="従業員番号："></td>
+			<td th:text="Employee No："></td>
 			<td th:text="${employee.seqNo}"></td>
 		</tr>
 		<tr>
-			<td th:text="苗字："></td>
+			<td th:text="Family Name："></td>
 			<td th:text="${employee.familyName}"></td>
 		</tr>
 		<tr>
-			<td th:text="名前："></td>
+			<td th:text="Given Name："></td>
 			<td th:text="${employee.givenName}"></td>
 		</tr>
 	</table>
 	<br/>
-	<a href="/employeList" th:href="@{/employeeList}">一覧画面へ戻る</a>
+	<a href="/employeList" th:href="@{/employeeList}">Back to List</a>
 </body>
 </html>
