--- a/EmployeeDB/src/main/resources/templates/employeeEdit.html
+++ b/EmployeeDB/src/main/resources/templates/employeeEdit.html
@@ -9,18 +9,18 @@
 		<form method="post" th:action="@{./employeeEdit/submit}">
 			<table>
 				<tr>
-					<td th:text="苗字："></td>
+					<td th:text="Family Name："></td>
 					<td><input type="text" class="form-control" id="familyName" name="familyName" th:field="${employee.familyName}"/></td>
 				</tr>
 				<tr>
-					<td th:text="名前："></td>
+					<td th:text="Given Name："></td>
 					<td><input type="text" id="givenName" name="givenName" th:field="${employee.givenName}"/></td>
 				</tr>
 			</table>
 			<input type="hidden" name="seqNo" th:value="${employee.seqNo}" />
-			<button type="submit" class="btn btn-default">保存</button>
+			<button type="submit" class="btn btn-default">Save</button>
 		</form>
 		<br/>
-		<a href="/userList" th:href="@{/employeeDetail(id=${employee.seqNo})}">詳細画面へ戻る</a>
+		<a href="/userList" th:href="@{/employeeDetail(id=${employee.seqNo})}">Back to Detail</a>
 	</body>
 </html>
