--- a/EmployeeDB/src/main/resources/templates/employeeInput.html
+++ b/EmployeeDB/src/main/resources/templates/employeeInput.html
@@ -9,17 +9,17 @@
 		<form method="post" th:action="@{./employeeInput/submit}">
 			<table>
 				<tr>
-					<td th:text="苗字："></td>
+					<td th:text="Family Name："></td>
 					<td><input type="text" class="form-control" id="familyName" name="familyName"/></td>
 				</tr>
 				<tr>
-					<td th:text="名前："></td>
+					<td th:text="Given Name："></td>
 					<td><input type="text" id="givenName" name="givenName"/></td>
 				</tr>
 			</table>
-			<button type="submit" class="btn btn-default">登録</button>
+			<button type="submit" class="btn btn-default">Register</button>
 		</form>
 		<br/>
-		<a href="/employeeList" th:href="@{/employeeList}">一覧へ戻る</a>
+		<a href="/employeeList" th:href="@{/employeeList}">Back to List</a>
 	</body>
 </html>
