modify string literals expression on thymeleafs.

--- a/EmployeeDB/src/main/resources/templates/employeeDetail.html
+++ b/EmployeeDB/src/main/resources/templates/employeeDetail.html
@@ -13,15 +13,15 @@
 		</form>
 	<table>
 		<tr>
-			<td th:text="Employee No："></td>
+			<td th:text="'Employee No：'"></td>
 			<td th:text="${employee.seqNo}"></td>
 		</tr>
 		<tr>
-			<td th:text="Family Name："></td>
+			<td th:text="'Family Name：'"></td>
 			<td th:text="${employee.familyName}"></td>
 		</tr>
 		<tr>
-			<td th:text="Given Name："></td>
+			<td th:text="'Given Name：'"></td>
 			<td th:text="${employee.givenName}"></td>
 		</tr>
 	</table>
