--- a/EmployeeDB/src/main/resources/templates/employeeInput.html
+++ b/EmployeeDB/src/main/resources/templates/employeeInput.html
@@ -9,11 +9,11 @@
 		<form method="post" th:action="@{./employeeInput/submit}">
 			<table>
 				<tr>
-					<td th:text="Family Name："></td>
+					<td th:text="'Family Name：'"></td>
 					<td><input type="text" class="form-control" id="familyName" name="familyName"/></td>
 				</tr>
 				<tr>
-					<td th:text="Given Name："></td>
+					<td th:text="'Given Name：'"></td>
 					<td><input type="text" id="givenName" name="givenName"/></td>
 				</tr>
 			</table>
