--- a/EmployeeDB/src/main/resources/templates/login.html
+++ b/EmployeeDB/src/main/resources/templates/login.html
@@ -6,11 +6,14 @@
 </head>
 	<body>
 		<h1>Employee DB</h1>
-		<form method="post" th:action="@{./login/submit}">
+		<form method="post" th:action="@{/login}">
+			<div th:if="${iserror}" style="color:red;">
+	            <p>Login failed.</p>
+	        </div>
 			<table>
 				<tr>
 					<td th:text="'User Name：'"></td>
-					<td><input type="text" class="form-control" id="userName" name="userName"/></td>
+					<td><input type="text" class="form-control" id="username" name="username"/></td>
 				</tr>
 				<tr>
 					<td th:text="'Password：'"></td>
