--- a/EmployeeDB/src/main/resources/templates/header.html
+++ b/EmployeeDB/src/main/resources/templates/header.html
@@ -1,3 +1,3 @@
 <form role="form" id="logout" th:action="@{/logout}" method="post">
-    <button type="submit">Log Out</button>
+    <button type="submit">Logout</button>
 </form>
