--- a/EmployeeDB/src/main/resources/templates/employeeList.html
+++ b/EmployeeDB/src/main/resources/templates/employeeList.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<div th:include="header"></div>
 <title>Employee List</title>
 </head>
 <body>
