--- a/EmployeeDB/src/main/resources/templates/employeeInput.html
+++ b/EmployeeDB/src/main/resources/templates/employeeInput.html
@@ -10,6 +10,24 @@
 		<form method="post" th:action="@{./employeeInput/submit}">
 			<table>
 				<tr>
+					<td th:text="'Username：'"></td>
+					<td><input type="text" class="form-control" id="username" name="username"/></td>
+				</tr>
+				<tr>
+					<td th:text="'Password：'"></td>
+					<td><input type="password" class="form-control" id="password" name="password"/></td>
+				</tr>
+				<tr>
+					<td th:text="'Role：'"></td>
+					<td>
+						<select id="role" name="role">
+	              		<option value="">---</option>
+	              		<option value="admin">admin</option>
+	              		<option value="user">user</option>
+	            		</select>
+					</td>
+				</tr>
+				<tr>
 					<td th:text="'Family Name：'"></td>
 					<td><input type="text" class="form-control" id="familyName" name="familyName"/></td>
 				</tr>
