--- a/EmployeeDB/src/main/resources/templates/login.html
+++ b/EmployeeDB/src/main/resources/templates/login.html
@@ -17,7 +17,7 @@
 				</tr>
 				<tr>
 					<td th:text="'Password：'"></td>
-					<td><input type="text" id="password" name="password"/></td>
+					<td><input type="password" id="password" name="password"/></td>
 				</tr>
 			</table>
 			<button type="submit" class="btn btn-default">Log In</button>
