--- a/EmployeeDB/src/main/resources/templates/employeeList.html
+++ b/EmployeeDB/src/main/resources/templates/employeeList.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <div th:include="header"></div>
