--- a/EmployeeDB/src/main/resources/templates/employeeDetail.html
+++ b/EmployeeDB/src/main/resources/templates/employeeDetail.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 	<h1>Employee Detail</h1>
-	<button type="button" th:onClick="'location.href = \'' + @{../employeeEdit?seqNo={id}(id=${employee.seqNo})} + '\''">Edit</button>
+	<div sec:authorize="hasRole('ADMIN')">
+		<button type="button" th:onClick="'location.href = \'' + @{../employeeEdit?seqNo={id}(id=${employee.seqNo})} + '\''">Edit</button>
+	</div>
 	<div sec:authorize="hasRole('ADMIN')">
 		<form method="post" th:action="@{./employeeDetail/delete}">
 			<button type="submit" class="btn btn-default">Delete</button>
