--- a/EmployeeDB/src/main/resources/templates/employeeDetail.html
+++ b/EmployeeDB/src/main/resources/templates/employeeDetail.html
@@ -10,7 +10,7 @@
 	<div sec:authorize="hasRole('ADMIN')">
 		<button type="button" th:onClick="'location.href = \'' + @{../employeeEdit?seqNo={id}(id=${employee.seqNo})} + '\''">Edit</button>
 	</div>
-	<div sec:authorize="hasRole('ADMIN')">
+	<div th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
 		<form method="post" th:action="@{./employeeDetail/delete}">
 			<button type="submit" class="btn btn-default">Delete</button>
 			<input type="hidden" name="seqNo" th:value="${employee.seqNo}" />
