--- a/EmployeeDB/src/main/resources/templates/employeeDetail.html
+++ b/EmployeeDB/src/main/resources/templates/employeeDetail.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 	<h1>Employee Detail</h1>
-	<div sec:authorize="hasRole('ADMIN')">
+	<div th:if="${#authorization.expression('hasRole(''ADMIN'')') || employee.username == #authentication.principal.username}">
 		<button type="button" th:onClick="'location.href = \'' + @{../employeeEdit?seqNo={id}(id=${employee.seqNo})} + '\''">Edit</button>
 	</div>
-	<div th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
+	<div sec:authorize="hasRole('ADMIN')">
 		<form method="post" th:action="@{./employeeDetail/delete}">
 			<button type="submit" class="btn btn-default">Delete</button>
 			<input type="hidden" name="seqNo" th:value="${employee.seqNo}" />
