--- a/EmployeeDB/src/main/resources/templates/login.html
+++ b/EmployeeDB/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
 					<td><input type="password" id="password" name="password"/></td>
 				</tr>
 			</table>
-			<button type="submit" class="btn btn-default">Log In</button>
+			<button type="submit" class="btn btn-default">Log in</button>
 		</form>
 	</body>
 </html>
