--- a/EmployeeDB/src/main/resources/templates/employeeEdit.html
+++ b/EmployeeDB/src/main/resources/templates/employeeEdit.html
@@ -40,6 +40,6 @@
 			<button type="submit" class="btn btn-default">Save</button>
 		</form>
 		<br/>
-		<a href="/userList" th:href="@{/employeeDetail(id=${employee.seqNo})}">Back to Detail</a>
+		<a href="/userList" th:href="@{/employeeDetail(seqNo=${employee.seqNo})}">Back to Detail</a>
 	</body>
 </html>
