--- a/EmployeeDB/src/main/resources/templates/error/403.html
+++ b/EmployeeDB/src/main/resources/templates/error/403.html
@@ -5,7 +5,7 @@
 <title>Error</title>
 </head>
 <body>
-	<h1>Forbidden</h1>
+	<h1>403 Forbidden</h1>
 	<p>You don't have permission to view this page.</p>
 	<a href="/employeList" th:href="@{/employeeList}">Back to list</a>
 </body>
