--- a/EmployeeDB/src/main/resources/templates/error/404.html
+++ b/EmployeeDB/src/main/resources/templates/error/404.html
@@ -5,7 +5,7 @@
 <title>Error</title>
 </head>
 <body>
-	<h1>Page not found</h1>
+	<h1>404 Page not found</h1>
 	<p>The requested page was not found.</p>
 	<a href="/employeList" th:href="@{/employeeList}">Back to list</a>
 </body>
