--- a/EmployeeDB/src/main/resources/templates/error/500.html
+++ b/EmployeeDB/src/main/resources/templates/error/500.html
@@ -5,7 +5,7 @@
 <title>Error</title>
 </head>
 <body>
-	<h1>Error</h1>
+	<h1>500 Error</h1>
 	<p>Sorry, we had some technical problems.</p>
 	<a href="/employeList" th:href="@{/employeeList}">Back to list</a>
 </body>
