--- a/EmployeeDB/src/main/resources/templates/employeeInput.html
+++ b/EmployeeDB/src/main/resources/templates/employeeInput.html
@@ -14,8 +14,10 @@
 			<ul>
         		<li th:each="error : ${#fields.detailedErrors()}"
         			class="err" th:text="${error.message}">
+        			<span th:text="${error.message}">Error message</span>
         		</li>
     		</ul>
+    		<span th:if="${#fields.hasErrors('familyName')}" th:errors="*{familyName}" style="color: red"></span>
 			<table>
 				<tr>
 					<td th:text="'Username：'"></td>
