Add password confirm to html and form.

--- a/EmployeeDB/src/main/resources/templates/employeeInput.html
+++ b/EmployeeDB/src/main/resources/templates/employeeInput.html
@@ -27,6 +27,10 @@
 					<td><input type="password" class="form-control" id="password" name="password"/></td>
 				</tr>
 				<tr>
+					<td th:text="'Confirm Password：'"></td>
+					<td><input type="password" class="form-control" id="confirmPassword" name="confirmPassword"/></td>
+				</tr>
+				<tr>
 					<td th:text="'Role：'"></td>
 					<td>
 						<select id="role" name="role">
