completed a rememebr-me authentication function.

--- a/EmployeeDB/src/main/resources/templates/login.html
+++ b/EmployeeDB/src/main/resources/templates/login.html
@@ -19,6 +19,10 @@
 					<td th:text="'Password：'"></td>
 					<td><input type="password" id="password" name="password"/></td>
 				</tr>
+				<tr>
+                	<td>Remember Me:</td>
+                	<td><input type="checkbox" name="remember-me" /></td>
+            	</tr>
 			</table>
 			<button type="submit" class="btn btn-default">Log in</button>
 		</form>
